Update to my AsyncStepper lib

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,5 +7,5 @@ debug_tool = stlink
 lib_deps =
 ;CheapStepper
 ;https://github.com/Smeat/CheapStepper
- ../CheapStepper/
- https://github.com/thomasfredericks/Bounce2
+../AsyncStepper/
+https://github.com/thomasfredericks/Bounce2
