Move firmware to subfolder. Add heater firmware folder

--- a/firmware/tracker/platformio.ini
+++ b/firmware/tracker/platformio.ini
@@ -6,6 +6,6 @@ board = bluepill_f103c8
 debug_tool = stlink
 lib_deps =
 ;CheapStepper
-;https://github.com/Smeat/CheapStepper
-../AsyncStepper/
-https://github.com/thomasfredericks/Bounce2
+ https://github.com/Smeat/CheapStepper
+;../../../AsyncStepper/
+ https://github.com/thomasfredericks/Bounce2
