Switch to asyncStepper lib

--- a/firmware/tracker/platformio.ini
+++ b/firmware/tracker/platformio.ini
@@ -5,7 +5,5 @@ board = bluepill_f103c8
 ;upload_protocol = dfu
 debug_tool = stlink
 lib_deps =
-;CheapStepper
- https://github.com/Smeat/CheapStepper
-;../../../AsyncStepper/
+ ../../../AsyncStepper/
  https://github.com/thomasfredericks/Bounce2
